# jupblite

./: .gitattributes  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  tiny.proto
bazel/: BUILD
example_output/upb_test/: Tiny.java
inja-3.4.0/: BUILD
java/codegen/: BUILD.bazel  file_template.inja  helpers.cc  helpers.h  interface_template.inja  message_builder_template.inja  message_template.inja  protoc-gen-jupb.cc
java/runtime/main/jupb/: Arena.java  BUILD.bazel  JupbMessageLite.java  JupbMessageLiteOrBuilder.java  Messages.java  Minitable.java  ProtocolBufferDecodingException.java  ProtocolBufferEncodingException.java
java/runtime/main/jupb/jni/: BUILD.bazel  OnLoad.cpp  arena.cpp  arena.h  jni_helper.cpp  jni_helper.h  messages.cpp  messages.h  minitable.cpp  minitable.h
java/runtime/test/jupb/: ArenaTest.java  BUILD.bazel  MessagesTest.java
java/test/: BUILD.bazel  TinyProtoTest.java
tools/format/: BUILD.bazel
