###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "protobuf", version = "27.2", repo_name = "com_google_protobuf")
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "rules_jni", version = "0.10.1")
bazel_dep(name = "rules_jvm_external", version = "6.1")
bazel_dep(name = "rules_java", version = "7.6.5")
bazel_dep(name = "aspect_rules_lint", version = "1.0.0-rc5")
bazel_dep(name = "buildifier_prebuilt", version = "6.3.3")
bazel_dep(name = "toolchains_llvm", version = "0.10.3")

# Formatting
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_versions = {
        "": "16.0.0",
        "darwin-x86_64": "15.0.7",
    },
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

bazel_dep(name = "rules_buf", version = "0.2.0")

buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")
use_repo(buf, "rules_buf_toolchains")
